# sengen

./: Cargo.toml  README.md  config.toml
src/: chromosome.rs  main.rs  rates.rs  structures.rs  words.rs
words/: adjectives.toml  adverbs.toml  conjunctions.toml  determiners.toml  nouns.toml  prepositions.toml  pronouns.toml  verbs.toml  verbs.txt
