[package]
name = "GA"
version = "0.1.0"
edition = "2024"

[dependencies]
genetica = "1.0.1"
rand = "0.9.2"
serde = {version ="1.0.228", features = ["derive"]}
toml = "0.9.8"
rayon = "1.11.0"
lazy_static = "1.5.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
lto = false
incremental = true
codegen-units = 32

[profile.release]
opt-level = 3
debug = false 
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
